--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
       <div class="access_stay">
         <div class="map_and_access">
           <div class="item">
-            <img src="../Image/Map_Echigo-Yuzawa.png" alt="Location of Echigo-Yuzawa at Japan map" width="230">
+            <img src="./Map_Echigo-Yuzawa.png"/ alt="Location of Echigo-Yuzawa at Japan map" width="230">
           </div>
           <div class="item">
-            <img src="../Image/Access_Echigo-Yuzawa.png" alt="Access to Echigo-Yuzawa from Tokyo" width="280">
+            <img src=".Access_Echigo-Yuzawa.png"/ alt="Access to Echigo-Yuzawa from Tokyo" width="280">
           </div>
           <div class="item">
             <ul>
@@ -154,10 +154,10 @@
       <div class="access_stay">
         <div class="map_and_access">
           <div class="item">
-            <img src="../Image/Map_Minakami.png" alt="水上の日本地図上の位置" width="230">
+            <img src="./Map_Minakami.png"/ alt="水上の日本地図上の位置" width="230">
           </div>
           <div class="item">
-            <img src="../Image/Access_Minakami.png" alt="東京から水上へのアクセス" width="265">
+            <img src="./Access_Minakami.png"/ alt="東京から水上へのアクセス" width="265">
           </div>
           <div class="item">
             <ul>
@@ -206,10 +206,10 @@
       <div class="access_stay">
         <div class="map_and_access">
           <div class="item">
-            <img src="../Image/Map_Karuizawa.png" alt="軽井沢の日本地図上の位置" width="230">
+            <img src="./Map_Karuizawa.png"/ alt="軽井沢の日本地図上の位置" width="230">
           </div>
           <div class="item">
-            <img src="../Image/Access_Karuizawa.png" alt="東京から軽井沢へのアクセス" width="252">
+            <img src="./Access_Karuizawa.png"/ alt="東京から軽井沢へのアクセス" width="252">
           </div>
           <div class="item">
             <ul>
@@ -225,10 +225,10 @@
       <div class="access_stay">
         <div class="map_and_access">
           <div class="item">
-            <img src="../Image/Map_Asahikawa.png" alt="旭川の日本地図上の位置" width="230">
+            <img src="./Map_Asahikawa.png"/ alt="旭川の日本地図上の位置" width="230">
           </div>
           <div class="item">
-            <img src="../Image/Access_Asahikawa.png" alt="東京から旭川へのアクセス" width="240">
+            <img src="./Access_Asahikawa.png"/ alt="東京から旭川へのアクセス" width="240">
           </div>
           <div class="item">
             <ul>
@@ -245,10 +245,10 @@
       <div class="access_stay">
         <div class="map_and_access">
           <div class="item">
-            <img src="../Image/Map_Inawashiro.png" alt="猪苗代の日本地図上の場所" width="230">
+            <img src="./Map_Inawashiro.png"/ alt="猪苗代の日本地図上の場所" width="230">
           </div>
           <div class="item">
-            <img src="../Image/Access_Inawashiro.png" alt="東京から猪苗代へのアクセス" width="300">
+            <img src="./Access_Inawashiro.png"/ alt="東京から猪苗代へのアクセス" width="300">
           </div>
           <div class="item">
             <ul>
