--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <img src="./Map_Echigo-Yuzawa.png"/ alt="Location of Echigo-Yuzawa at Japan map" width="230">
           </div>
           <div class="item">
-            <img src=".Access_Echigo-Yuzawa.png"/ alt="Access to Echigo-Yuzawa from Tokyo" width="280">
+            <img src="./Access_Echigo-Yuzawa.png"/ alt="Access to Echigo-Yuzawa from Tokyo" width="280">
           </div>
           <div class="item">
             <ul>
