--- a/Muika_EN.html
+++ b/Muika_EN.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muika Snow Resort</title>
-    <link rel="stylesheet" href="./Detail_responsive.css"/>
+    <link rel="stylesheet" href="./Detail_responsive.css" />
 </head>
 
 <body>
@@ -46,7 +46,7 @@
         </div>
         <div class="bottom-section">
             <div>
-                <img src="./access_muika.png"/ alt="Access to Muika snow resort" width="250">
+                <img src="./access_muika.png" / alt="Access to Muika snow resort" width="250">
             </div>
             <div class="table-box">
                 <table class="table-box">
@@ -114,26 +114,31 @@
         <div class="bottom-section">
             <div>
                 <h3>Map of arround Muikamachi station</h3>
-                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1A877IQxka8Dm4u6jyJVeCQDYZQU9MFE&ehbc=2E312F&noprof=1" width="500" height="300"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/d/u/0/embed?mid=1A877IQxka8Dm4u6jyJVeCQDYZQU9MFE&ehbc=2E312F&noprof=1"
+                    width="500" height="300"></iframe>
             </div>
             <div>
                 <ol>
                     <div class="restaurant">
-                        <li><img src="./Yachiyozushi.jpg"/ alt="Yoshiozushi, famous sushi restaurant at Muikamachi" width="100" align="left"></li>
+                        <li><img src="./Yachiyozushi.jpg" / alt="Yoshiozushi, famous sushi restaurant at Muikamachi"
+                                width="100" align="left"></li>
                         <p>Yachiyo Sushi<br>
                             2038-8 Muikamachi, Minamiuonuma, Niigata 949-6680</p>
                     </div>
                     <div class="restaurant">
-                        <li><img src="./Uonuma kamakura.jpg"/ alt="Kamakura, famous izukaya at Muikamachi" width="100"></li>
+                        <li><img src="./Uonuma kamakura.jpg" / alt="Kamakura, famous izukaya at Muikamachi" width="100">
+                        </li>
                         <p>Uonuma Kamakura<br>
                             〒949-6680 Niigata, Minamiuonuma, Muikamachi, 105-1</p>
                     </div>
                     <div class="restaurant">
-                        <li><img src="./Ryu-ken.jpg"/ alt="Tyu-ken, famous ramen restaurant at Muikamachi" width="100"></li>
+                        <li><img src="./Ryu-ken.jpg" / alt="Tyu-ken, famous ramen restaurant at Muikamachi" width="100">
+                        </li>
                         <p>Ryu-Ken<br>181-3 Muikamachi, Minamiuonuma, Niigata 949-6680</p>
                     </div>
                     <div class="restaurant">
-                        <li><img src="./Yuraria.jpg"/ alt="Yuraria. famous hot spa at Muikamachi" width="100"></li>
+                        <li><img src="./Yuraria.jpg" / alt="Yuraria. famous hot spa at Muikamachi" width="100"></li>
                         <p>Yuraria Onsen<br>181-3 Muikamachi, Minamiuonuma, Niigata 949-6680</p>
                     </div>
                 </ol>
@@ -144,19 +149,20 @@
     <section>
         <h2>Photo Gallery</h2>
         <div class="gallery">
-            <img src="./IMG_3367.jpg"/>
-            <img src="./IMG_3368.jpg"/>
-            <img src="./IMG_3371.jpg"/>
-            <img src="./IMG_3374.jpg"/>
-            <img src="./IMG_3375.jpg"/>
-            <img src="./IMG_3377.jpg"/>
+            <img src="./IMG_3367.jpg" />
+            <img src="./IMG_3368.jpg" />
+            <img src="./IMG_3371.jpg" />
+            <img src="./IMG_3374.jpg" />
+            <img src="./IMG_3375.jpg" />
+            <img src="./IMG_3377.jpg" />
         </div>
     </section>
 
     <section>
         <h2>Course Map</h2>
         <div class="course">
-            <img src="./CourseMap_Muika.jpg"/ alt="Muika Snow Resort Course Map" class="course-map" alt="Course map of Muika snow resort" width="350">
+            <img src="./CourseMap_Muika.jpg" / alt="Muika Snow Resort Course Map" class="course-map"
+                alt="Course map of Muika snow resort" width="350">
             <div class="sidebar">
                 <h3>Ratio of ski/snowboard</h3>
                 <div class="combined-bar-chart">
@@ -172,45 +178,43 @@
                 </div>
                 <br>
                 <dov>
-                    <img src="./altitude_muika.png"/ width="350">
+                    <img src="./altitude_muika.png" / width="350">
             </div>
         </div>
     </section>
 
-<section>
-    <h1>円グラフ</h1>
-  <canvas id="myPieChart"></canvas>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
-  
-  <script>
-  var ctx = document.getElementById("myPieChart");
-  var myPieChart = new Chart(ctx, {
-    type: 'pie',
-    data: {
-      labels: ["Ski", "Snowboard"],
-      datasets: [{
-          backgroundColor: [
-              "#BB5179",
-              "#FAFF67",
-              "#58A27C",
-              "#3C00FF"
-          ],
-          data: [40, 60, 0, 0]
-      }]
-    },
-    options: {
-      title: {
-        display: true,
-        text: 'Ratio of ski/snowboard'
-      }
-    }
-  });
-  </script>
-</section>
 
-
-
-
+    <div class="chart-container" style="position: relative; width: 50vw; height: 50vh;">
+        <canvas id="myChart"></canvas>
+        <canvas id="myPieChart"></canvas>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+        <script>
+            var ctx = document.getElementById("myPieChart");
+            var myPieChart = new Chart(ctx, {
+                type: 'doughnut',
+                data: {
+                    labels: ["Ski", "Snowboard"],
+                    datasets: [{
+                        backgroundColor: [
+                            "#BB5179",
+                            "#FAFF67",
+                            "#58A27C",
+                            "#3C00FF"
+                        ],
+                        data: [40, 60, 0, 0]
+                    }]
+                },
+                options: {
+                    cutout: "50%",
+                    responsive: true,
+                    title: {
+                        display: true,
+                        text: 'Ratio of ski/snowboard'
+                    }
+                }
+            });
+        </script>
+    </div>
 
 
 
