--- a/Muika_EN.html
+++ b/Muika_EN.html
@@ -177,8 +177,9 @@
                     <div class="Advanced" style="width: 30%;">Advanced<br>30%</div>
                 </div>
                 <br>
-                <dov>
-                    <img src="./altitude_muika.png" / width="350">
+                <div>
+                    <img src="./muika_altitude.png" / width="350">
+                </div>
             </div>
         </div>
     </section>
