--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="item">
             <ul>
               <li><a href="Muika_EN.html">(A)Muika</a></li>
-              <li><!--<a href="../html/Hakkai-san_EN.html">-->(A)Hakkai-san</a></li>
+              <li><a href="Hakkai-san_EN.html">(A)Hakkai-san</a></li>
               <li><!--<a href="../html/Gala_EN.html">-->(B)Gala Yuzawa</a></li>
               <li><!--<a href="../html/Yuzawa-kogen_EN.html">-->(C)Yuzawa-Kogen</a></li>
               <li><!--<a href="../html/Kandatsu_EN.html">-->(C)Kandatsu</a></li>
@@ -184,10 +184,10 @@
       <div class="access_stay">
         <div class="map_and_access">
           <div class="item">
-            <img src="../Image/Map_Hakuba.png" alt="白馬の日本地図上の位置" width="230">
+            <img src="./Map_Hakuba.png"/ alt="白馬の日本地図上の位置" width="230">
           </div>
           <div class="item">
-            <img src="../Image/Access_Hakuba.png" alt="東京から白馬へのアクセス" width="243">
+            <img src="./Access_Hakuba.png"/ alt="東京から白馬へのアクセス" width="243">
           </div>
           <div class="item">
             <ul>
