--- a/Hakkai-san_EN.html
+++ b/Hakkai-san_EN.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkai-san</title>
-    <link rel="stylesheet" href="../CSS/Detail_responsive.css">
+    <link rel="stylesheet" href="./Detail_responsive.css"/>
 </head>
 
 <body>
@@ -140,14 +140,14 @@
         </div>
     </section>
 
-    <section>
+    <!--<section>
         <h2>Photo Gallery</h2>
         <div class="gallery">
             <img src="photo_muika1.jpg">
             <img src="Mountain2.jpg">
             <img src="on_042.jpg">
         </div>
-    </section>
+    </section>-->
 
     <section>
         <h2>Course Map</h2>
