--- a/Hakkai-san_EN.html
+++ b/Hakkai-san_EN.html
@@ -168,7 +168,7 @@
                 </div>
                 <br>
                 <dov>
-                    <img src="./altitude_Hakkai.png"/ width="350">
+                    <img src="./altitude_hakkai.png"/ width="350">
             </div>
         </div>
     </section>
